--- a/main_app/settings.py.sample
+++ b/main_app/settings.py.sample
@@ -11,6 +11,9 @@ https://docs.djangoproject.com/en/2.2/ref/settings/
 """
 
 import os
+import environ
+
+env = environ.Env()
 
 # Build paths inside the project like this: os.path.join(BASE_DIR, ...)
 BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
@@ -20,11 +23,10 @@ BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 # See https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = 'i^wvn1e%vea493f2^!!dt@%rgof#1m37qtlhlg$m7=@kl@y9f$'
+SECRET_KEY = env.str('DJANGO_SECRET_KEY', default='dummy key') 
 
 # SECURITY WARNING: don't run with debug turned on in production!
-DEBUG = True
-
+DEBUG = env.bool('DJANGO_DEBUG', default=True) 
 ALLOWED_HOSTS = []
 
 
