--- a/templates/conf.ini
+++ b/templates/conf.ini
@@ -12,4 +12,11 @@ section_lang_options_text[]={{ language.name_local }}
 section_lang_options_key[]={{ language.code }}
 {% endfor %}
 
+; section pageHeader 
+section_pageHeaderNav_shouldRender=true
+section_pageHeaderNav_menus_text[]={{_("Page1")}}
+section_pageHeaderNav_menus_href[]='/sample/page1/'
+section_pageHeaderNav_menus_text[]={{_("Page2")}}
+section_pageHeaderNav_menus_href[]='/sample/page2/'
+
 {% include 'i18n.ini' %}
