--- a/main_app/settings.py.sample
+++ b/main_app/settings.py.sample
@@ -111,7 +111,15 @@ AUTH_PASSWORD_VALIDATORS = [
 # Internationalization
 # https://docs.djangoproject.com/en/2.2/topics/i18n/
 
-LANGUAGE_CODE = 'en-us'
+LANGUAGE_CODE = "en"
+
+LANGUAGES = (
+    ("en", "English"),
+    ("zh-hant", "Traditional Chinese"),
+    ("zh-hans", "Simplified Chinese"),
+)
+
+LOCALE_PATHS = (os.path.join(BASE_DIR, "locale/"),)
 
 TIME_ZONE = 'UTC'
 
