--- a/templates/conf.ini
+++ b/templates/conf.ini
@@ -1,5 +1,7 @@
 {% load i18n %}
 
+csrfToken={{ csrf_token }}
+
 ; section language
 section_lang_shouldRender=true
 {% get_current_language as LANGUAGE_CODE %}
