--- a/wwwroot-orig/hello-world/package.json
+++ b/wwwroot-orig/hello-world/package.json
@@ -7,9 +7,10 @@
     "non-worker": "*",
     "object-nested": "*",
     "organism-react-ajax": "*",
+    "organism-react-django": "*",
+    "organism-react-navigation": "*",
     "organism-react-popup": "*",
     "organism-react-progress": "*",
-    "organism-react-navigation": "*",
     "parse-ini-string": "*",
     "pmvc_react_landing": "*",
     "react": "^16.x",
